--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/coin.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Split Expense - Share Costs Easily with Friends</title>
+    <meta
+      name="description"
+      content="Split any shared expenses easily with friends. Track group costs, calculate who owes whom, and settle up with minimal transactions. No registration required!"
+    />
+    <meta
+      name="keywords"
+      content="expense splitting, split costs, group expenses, shared expenses, bill splitting, expense calculator, money tracking"
+    />
   </head>
   <body>
     <div id="root"></div>
