--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/coin.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no"
+    />
+
+    <!-- Primary Meta Tags -->
     <title>Split Expense - Share Costs Easily with Friends</title>
     <meta
       name="description"
@@ -13,9 +18,180 @@
       name="keywords"
       content="expense splitting, split costs, group expenses, shared expenses, bill splitting, expense calculator, money tracking"
     />
+
+    <!-- PWA Meta Tags -->
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#667eea" />
+    <meta name="background-color" content="#ffffff" />
+    <meta name="display" content="standalone" />
+
+    <!-- iOS Specific Meta Tags -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Split Expense" />
+    <link rel="apple-touch-icon" href="/icons/app-icon.svg" />
+
+    <!-- Android/Chrome Meta Tags -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="application-name" content="Split Expense" />
+
+    <!-- Microsoft Tile Meta Tags -->
+    <meta name="msapplication-TileColor" content="#667eea" />
+    <meta name="msapplication-TileImage" content="/icons/app-icon.svg" />
+    <meta
+      name="msapplication-tooltip"
+      content="Split Expense - Share costs easily"
+    />
+
+    <!-- Additional PWA Meta Tags -->
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="HandheldFriendly" content="true" />
+    <meta name="MobileOptimized" content="width" />
+    <meta name="apple-touch-fullscreen" content="yes" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <!-- Service Worker Registration -->
+    <script>
+      // Register Service Worker for PWA functionality
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", async () => {
+          try {
+            const registration = await navigator.serviceWorker.register(
+              "/sw.js"
+            );
+            console.log("SW registered: ", registration);
+
+            // Handle service worker updates
+            registration.addEventListener("updatefound", () => {
+              const newWorker = registration.installing;
+              if (newWorker) {
+                newWorker.addEventListener("statechange", () => {
+                  if (
+                    newWorker.state === "installed" &&
+                    navigator.serviceWorker.controller
+                  ) {
+                    // New version available
+                    if (
+                      confirm(
+                        "New version of Split Expense is available. Refresh to update?"
+                      )
+                    ) {
+                      window.location.reload();
+                    }
+                  }
+                });
+              }
+            });
+          } catch (error) {
+            console.log("SW registration failed: ", error);
+          }
+        });
+      }
+
+      // Add to Home Screen prompt handling
+      let deferredPrompt;
+      let isInstallPromptShown = false;
+
+      window.addEventListener("beforeinstallprompt", (e) => {
+        console.log("PWA: Install prompt triggered");
+        e.preventDefault();
+        deferredPrompt = e;
+
+        // Show custom install banner after 30 seconds if not installed
+        setTimeout(() => {
+          if (
+            !isInstallPromptShown &&
+            !window.matchMedia("(display-mode: standalone)").matches
+          ) {
+            showInstallBanner();
+          }
+        }, 30000);
+      });
+
+      function showInstallBanner() {
+        isInstallPromptShown = true;
+        const installBanner = document.createElement("div");
+        installBanner.id = "install-banner";
+        installBanner.style.cssText = `
+          position: fixed;
+          bottom: 20px;
+          left: 20px;
+          right: 20px;
+          background: #667eea;
+          color: white;
+          padding: 16px;
+          border-radius: 8px;
+          box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+          z-index: 1000;
+          font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', roboto, sans-serif;
+          font-size: 14px;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+        `;
+
+        installBanner.innerHTML = `
+          <div>
+            <div style="font-weight: 600; margin-bottom: 4px;">📱 Install Split Expense</div>
+            <div style="opacity: 0.9; font-size: 12px;">Add to home screen for easy access!</div>
+          </div>
+          <div>
+            <button id="install-btn" style="background: rgba(255,255,255,0.2); border: none; color: white; padding: 8px 12px; border-radius: 4px; font-size: 12px; margin-right: 8px; cursor: pointer;">Install</button>
+            <button id="dismiss-btn" style="background: none; border: none; color: white; padding: 8px; cursor: pointer; opacity: 0.7;">✕</button>
+          </div>
+        `;
+
+        document.body.appendChild(installBanner);
+
+        // Install button click
+        document
+          .getElementById("install-btn")
+          .addEventListener("click", async () => {
+            if (deferredPrompt) {
+              deferredPrompt.prompt();
+              const result = await deferredPrompt.userChoice;
+              console.log("PWA install result:", result);
+              deferredPrompt = null;
+            }
+            installBanner.remove();
+          });
+
+        // Dismiss button click
+        document.getElementById("dismiss-btn").addEventListener("click", () => {
+          installBanner.remove();
+        });
+
+        // Auto-dismiss after 10 seconds
+        setTimeout(() => {
+          if (document.getElementById("install-banner")) {
+            installBanner.remove();
+          }
+        }, 10000);
+      }
+
+      // Handle app installation
+      window.addEventListener("appinstalled", (evt) => {
+        console.log("PWA: App installed successfully");
+      });
+
+      // Check if app is running in standalone mode
+      if (
+        window.matchMedia("(display-mode: standalone)").matches ||
+        window.navigator.standalone
+      ) {
+        console.log("PWA: Running in standalone mode");
+        document.documentElement.style.setProperty(
+          "--safe-area-inset-top",
+          "env(safe-area-inset-top)"
+        );
+        document.documentElement.style.setProperty(
+          "--safe-area-inset-bottom",
+          "env(safe-area-inset-bottom)"
+        );
+      }
+    </script>
   </body>
 </html>
