add google adsense

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       content="expense splitting, split costs, group expenses, shared expenses, bill splitting, expense calculator, money tracking"
     />
 
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7682850870038833"
+      crossorigin="anonymous"
+    ></script>
+
     <!-- PWA Meta Tags -->
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#667eea" />
