add change trip to group

--- a/index.html
+++ b/index.html
@@ -9,15 +9,112 @@
     />
 
     <!-- Primary Meta Tags -->
-    <title>Split Expense - Share Costs Easily with Friends</title>
+    <title>Split Expenses Online Free - Easy Bill Splitting Calculator</title>
     <meta
       name="description"
-      content="Split any shared expenses easily with friends. Track group costs, calculate who owes whom, and settle up with minimal transactions. No registration required!"
+      content="Split expenses online free with friends and groups. Easy bill splitting calculator for shared costs, travel expenses, and group spending. No registration required - start splitting expenses instantly!"
     />
     <meta
       name="keywords"
-      content="expense splitting, split costs, group expenses, shared expenses, bill splitting, expense calculator, money tracking"
+      content="split expenses online, split expense online free, split costs online, bill splitting calculator, expense splitting app, split expenses free, online expense splitter, group expense calculator, shared expense tracker, split bills online, expense sharing tool"
     />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Split Expense App" />
+    <link rel="canonical" href="https://splitexpense.web.app/" />
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+
+    <!-- Open Graph Meta Tags for Social Sharing -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Split Expense" />
+    <meta
+      property="og:title"
+      content="Split Expenses Online Free - Easy Bill Splitting Calculator"
+    />
+    <meta
+      property="og:description"
+      content="Split expenses online free with friends and groups. Easy bill splitting calculator for shared costs, travel expenses, and group spending. No registration required!"
+    />
+    <meta property="og:url" content="https://splitexpense.web.app/" />
+    <meta
+      property="og:image"
+      content="https://splitexpense.web.app/icons/app-icon.svg"
+    />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Split Expenses Online Free - Easy Bill Splitting Calculator"
+    />
+    <meta
+      name="twitter:description"
+      content="Split expenses online free with friends and groups. Easy bill splitting calculator for shared costs, travel expenses, and group spending. No registration required!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://splitexpense.web.app/icons/app-icon.svg"
+    />
+    <meta name="twitter:site" content="@splitexpense" />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="geo.region" content="US" />
+    <meta name="geo.placename" content="United States" />
+    <meta name="geo.position" content="39.78373;-100.445882" />
+    <meta name="ICBM" content="39.78373, -100.445882" />
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Split Expense",
+        "alternateName": [
+          "Split Expenses Online",
+          "Bill Splitting Calculator",
+          "Expense Splitter"
+        ],
+        "url": "https://splitexpense.web.app/",
+        "description": "Split expenses online free with friends and groups. Easy bill splitting calculator for shared costs, travel expenses, and group spending. No registration required.",
+        "applicationCategory": "FinanceApplication",
+        "operatingSystem": "Web Browser",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        },
+        "featureList": [
+          "Split expenses online free",
+          "Bill splitting calculator",
+          "Group expense tracking",
+          "Travel expense splitting",
+          "No registration required",
+          "Real-time collaboration",
+          "Minimal transaction optimization"
+        ],
+        "screenshot": "https://splitexpense.web.app/icons/app-icon.svg",
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "reviewCount": "127"
+        },
+        "author": {
+          "@type": "Organization",
+          "name": "Split Expense Team"
+        },
+        "creator": {
+          "@type": "Organization",
+          "name": "Split Expense Team"
+        },
+        "provider": {
+          "@type": "Organization",
+          "name": "Split Expense",
+          "url": "https://splitexpense.web.app/"
+        }
+      }
+    </script>
 
     <script
       async
