--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Split Expense App" />
+    <meta
+      name="google-site-verification"
+      content="4-mKM4JgfySp5yjEkaCMSweT_4M7NGQrRWmUciEneJ8"
+    />
     <link rel="canonical" href="https://splitexpense.web.app/" />
     <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
