--- a/index.html
+++ b/index.html
@@ -207,6 +207,10 @@
     <!-- Safari-specific optimizations -->
     <meta name="supported-color-schemes" content="light dark" />
     <meta name="color-scheme" content="light dark" />
+
+    <!-- Status bar styling for PWA -->
+    <meta name="theme-color" content="#667eea" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   </head>
   <body>
     <div id="root"></div>
