--- a/index.html
+++ b/index.html
@@ -210,7 +210,10 @@
 
     <!-- Status bar styling for PWA -->
     <meta name="theme-color" content="#667eea" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
   </head>
   <body>
     <div id="root"></div>
